--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <footer>
             <div class="footer-content">
               <div class="footer-contact">
-                <img src="./images/Logo_black.png" class="footer-logo" alt="logo">
+                <a href="./index.html"><img src="./images/Logo_black.png" class="footer-logo" alt="logo"></a>
                 <p>E-Mail: co2-monitor@gmail.com</p>
                 <p>Telefon: +49 123 4567890</p>
               </div>
