--- a/datenschutzrichtlinien.html
+++ b/datenschutzrichtlinien.html
@@ -4,71 +4,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutzrichtlinien</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles_2.css">
 </head>
-<body>
-    <header>
-        <img src="./images/logo_weiss.png" alt="logo">
-        <button onclick="window.location.href='index.html';">Zurück zur Homepage</button>
-    </header>
+<body class="bg-black">
+    <main class="gridContainer">
+        <header id="header">
+            <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
+              <a class="navbar-brand" href="./index.html">
+                <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
+              </a>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item header-nav-item">
+                    <a class="nav-link active" href="./index.html">Zurück zur Homepage</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </header>
 
-    <main>
-        <h1>Datenschutzrichtlinien</h1>
-        <p>Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Diese Datenschutzrichtlinien erläutern, wie wir mit Ihren personenbezogenen Daten umgehen, die Sie auf dieser Website bereitstellen.</p>
+        <section id="intro">
+            <h1>Datenschutzrichtlinien</h1>
+            <p>Der Schutz Ihrer persönlichen Daten ist uns sehr wichtig. Diese Datenschutzrichtlinien erläutern, wie wir mit Ihren personenbezogenen Daten umgehen, die Sie auf dieser Website bereitstellen.</p>
 
-        <h3>1. Verantwortlicher für die Datenverarbeitung</h3>
-        <p>Die Verarbeitung Ihrer personenbezogenen Daten erfolgt durch: CO₂ Monitor Non-Profit-Organisation</p>
+            <h3>1. Verantwortlicher für die Datenverarbeitung</h3>
+            <p>Die Verarbeitung Ihrer personenbezogenen Daten erfolgt durch: CO₂ Monitor Non-Profit-Organisation</p>
 
-        <h3>2. Erhebung und Verarbeitung personenbezogener Daten</h3>
-        <p>Wir erheben personenbezogene Daten, wenn Sie uns diese freiwillig zur Verfügung stellen, z. B. bei der Nutzung unseres Kontaktformulars oder beim Abonnieren unseres Newsletters. Die erhobenen Daten umfassen in der Regel: Name, Vorname, E-Mail-Adresse</p>
+            <h3>2. Erhebung und Verarbeitung personenbezogener Daten</h3>
+            <p>Wir erheben personenbezogene Daten, wenn Sie uns diese freiwillig zur Verfügung stellen, z. B. bei der Nutzung unseres Kontaktformulars oder beim Abonnieren unseres Newsletters. Die erhobenen Daten umfassen in der Regel: Name, Vorname, E-Mail-Adresse</p>
 
-        <h3>3. Zweck der Datenverarbeitung</h3>
-        <p>Wir verwenden Ihre personenbezogenen Daten ausschließlich für folgende Zwecke:</p>
-        <ul>
-            <li>Bearbeitung Ihrer Anfragen und Kommunikation</li>
-            <li>Versendung von Newslettern (nur mit Ihrer ausdrücklichen Zustimmung)</li>
-            <li>Verbesserung unserer Website und Dienstleistungen</li>
-        </ul>
+            <h3>3. Zweck der Datenverarbeitung</h3>
+            <p>Wir verwenden Ihre personenbezogenen Daten ausschließlich für folgende Zwecke:</p>
+            <ul>
+                <li>Bearbeitung Ihrer Anfragen und Kommunikation</li>
+                <li>Versendung von Newslettern (nur mit Ihrer ausdrücklichen Zustimmung)</li>
+                <li>Verbesserung unserer Website und Dienstleistungen</li>
+            </ul>
 
-        <h3>4. Weitergabe von Daten</h3>
-        <p>Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben, außer wenn dies für die Erfüllung der oben genannten Zwecke erforderlich ist, wie z. B. die Übermittlung an einen Dienstleister für die Bearbeitung von Anfragen. In keinem Fall werden Ihre Daten verkauft oder ohne Ihre Zustimmung an Dritte weitergegeben.</p>
+            <h3>4. Weitergabe von Daten</h3>
+            <p>Ihre personenbezogenen Daten werden nicht an Dritte weitergegeben, außer wenn dies für die Erfüllung der oben genannten Zwecke erforderlich ist, wie z. B. die Übermittlung an einen Dienstleister für die Bearbeitung von Anfragen. In keinem Fall werden Ihre Daten verkauft oder ohne Ihre Zustimmung an Dritte weitergegeben.</p>
 
-        <h3>5. Cookies</h3>
-        <p>Unsere Website verwendet Cookies, um das Benutzererlebnis zu verbessern. Cookies sind kleine Textdateien, die auf Ihrem Gerät gespeichert werden, wenn Sie unsere Seite besuchen. Sie können die Speicherung von Cookies in den Einstellungen Ihres Browsers deaktivieren, jedoch kann dies die Nutzung der Website einschränken.</p>
+            <h3>5. Cookies</h3>
+            <p>Unsere Website verwendet Cookies, um das Benutzererlebnis zu verbessern. Cookies sind kleine Textdateien, die auf Ihrem Gerät gespeichert werden, wenn Sie unsere Seite besuchen. Sie können die Speicherung von Cookies in den Einstellungen Ihres Browsers deaktivieren, jedoch kann dies die Nutzung der Website einschränken.</p>
 
-        <h3>6. Ihre Rechte</h3>
-        <p>Im Hinblick auf Ihre personenbezogenen Daten haben Sie das Recht:</p>
-        <ul>
-            <li>Auf Auskunft über die gespeicherten Daten</li>
-            <li>Auf Berichtigung oder Löschung der Daten</li>
-            <li>Auf Einschränkung der Verarbeitung</li>
-            <li>Auf Widerspruch gegen die Verarbeitung</li>
-            <li>Auf Datenübertragbarkeit</li>
-        </ul>
-        <p>Um eines dieser Rechte auszuüben, können Sie uns jederzeit über die oben angegebene Kontaktadresse erreichen.</p>
+            <h3>6. Ihre Rechte</h3>
+            <p>Im Hinblick auf Ihre personenbezogenen Daten haben Sie das Recht:</p>
+            <ul>
+                <li>Auf Auskunft über die gespeicherten Daten</li>
+                <li>Auf Berichtigung oder Löschung der Daten</li>
+                <li>Auf Einschränkung der Verarbeitung</li>
+                <li>Auf Widerspruch gegen die Verarbeitung</li>
+                <li>Auf Datenübertragbarkeit</li>
+            </ul>
+            <p>Um eines dieser Rechte auszuüben, können Sie uns jederzeit über die oben angegebene Kontaktadresse erreichen.</p>
 
-        <h3>7. Sicherheit</h3>
-        <p>Wir treffen geeignete technische und organisatorische Maßnahmen, um Ihre personenbezogenen Daten vor Verlust, Missbrauch oder unbefugtem Zugriff zu schützen.</p>
+            <h3>7. Sicherheit</h3>
+            <p>Wir treffen geeignete technische und organisatorische Maßnahmen, um Ihre personenbezogenen Daten vor Verlust, Missbrauch oder unbefugtem Zugriff zu schützen.</p>
 
-        <h3>8. Änderungen der Datenschutzrichtlinien</h3>
-        <p>Wir behalten uns vor, diese Datenschutzrichtlinien jederzeit zu ändern, um sie an geänderte rechtliche Rahmenbedingungen oder bei Änderungen unserer Dienstleistungen anzupassen. Die jeweils aktuelle Version ist auf dieser Seite abrufbar.</p>
+            <h3>8. Änderungen der Datenschutzrichtlinien</h3>
+            <p>Wir behalten uns vor, diese Datenschutzrichtlinien jederzeit zu ändern, um sie an geänderte rechtliche Rahmenbedingungen oder bei Änderungen unserer Dienstleistungen anzupassen. Die jeweils aktuelle Version ist auf dieser Seite abrufbar.</p>
 
-        <h3>9. Kontakt</h3>
-        <p>Für Fragen zum Thema Datenschutz oder zur Ausübung Ihrer Rechte können Sie uns unter der oben angegebenen Adresse kontaktieren.</p>
+            <h3>9. Kontakt</h3>
+            <p>Für Fragen zum Thema Datenschutz oder zur Ausübung Ihrer Rechte können Sie uns unter der oben angegebenen Adresse kontaktieren.</p>
+        </section>
+
+        <footer>
+            <div class="footer-content">
+              <div class="footer-contact">
+                <a href="./index.html"><img src="./images/Logo_black.png" class="footer-logo" alt="logo"></a>
+                <p>E-Mail: co2-monitor@gmail.com</p>
+                <p>Telefon: +49 123 4567890</p>
+              </div>
+              <div class="social-links">
+                <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
+                <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
+                <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
+              </div>
+              <div class="footer-links">
+                <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
+                <a href="impressum.html">Impressum</a>
+                <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
+              </div>
+            </div>
+          </footer>
     </main>
-
-    <footer>
-        <img src="./images/logo_weiss.png" alt="logo">
-        <p>E-Mail: co2-monitor@gmail.com</p>
-        <p>Telefon: +49 123 4567890</p>
-
-        <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
-        <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
-        <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
-
-        <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
-        <a href="impressum.html">Impressum</a>
-        <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
-    </footer>
 </body>
 </html>
 
