--- a/impressum.html
+++ b/impressum.html
@@ -4,64 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Impressum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles_2.css">
 </head>
-<body>
-    <header>
-        <img src="./images/logo_weiss.png" alt="logo">
-        <button onclick="window.location.href='index.html';">Zurück zur Homepage</button>
-    </header>
+<body class="bg-black">
+    <main class="gridContainer">
+        <header id="header">
+            <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
+              <a class="navbar-brand" href="./index.html">
+                <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
+              </a>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item header-nav-item">
+                    <a class="nav-link active" href="./index.html">Zurück zur Homepage</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </header>
 
-    <main>
-        <h1>Impressum</h1>
-        <h3>Angaben gemäß § 5 TMG:</h3>
-        <p>CO₂ Monitor Non-Profit-Organisation</p>
-        <p>Musterstraße 12</p>
-        <p>12345 Musterstadt</p>
-        <p>Deutschland</p>
+        <section id="intro">
+            <h1>Impressum</h1>
+            <h3>Angaben gemäß § 5 TMG:</h3>
+            <p>CO₂ Monitor Non-Profit-Organisation</p>
+            <p>Musterstraße 12</p>
+            <p>12345 Musterstadt</p>
+            <p>Deutschland</p>
 
-        <h3>Vertreten durch:</h3>
-        <p>Max Mustermann (Vorstand)</p>
+            <h3>Vertreten durch:</h3>
+            <p>Max Mustermann (Vorstand)</p>
 
-        <h3>Kontakt:</h3>
-        <p>Telefon: +49 (0)123 456789</p>
-        <p>E-Mail: kontakt@co2-monitor.org</p>
-        <p>Website: www.co2-monitor.org</p>
+            <h3>Kontakt:</h3>
+            <p>Telefon: +49 (0)123 456789</p>
+            <p>E-Mail: kontakt@co2-monitor.org</p>
+            <p>Website: www.co2-monitor.org</p>
 
-        <h3>Registereintrag:</h3>
-        <p>Eingetragen im Vereinsregister</p>
-        <p>Registergericht: Amtsgericht Musterstadt</p>
-        <p>Registernummer: VR 123456</p>
+            <h3>Registereintrag:</h3>
+            <p>Eingetragen im Vereinsregister</p>
+            <p>Registergericht: Amtsgericht Musterstadt</p>
+            <p>Registernummer: VR 123456</p>
 
-        <h3>Umsatzsteuer-Identifikationsnummer gemäß § 27a UStG:</h3>
-        <p>DE123456789</p>
+            <h3>Umsatzsteuer-Identifikationsnummer gemäß § 27a UStG:</h3>
+            <p>DE123456789</p>
 
-        <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
-        <p>Max Mustermann</p>
-        <p>Musterstraße 12</p>
-        <p>12345 Musterstadt</p>
+            <h3>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</h3>
+            <p>Max Mustermann</p>
+            <p>Musterstraße 12</p>
+            <p>12345 Musterstadt</p>
 
-        <h3>Haftungsausschluss:</h3>
-        <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Dennoch übernehmen wir keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte.</p>
+            <h3>Haftungsausschluss:</h3>
+            <p>Die Inhalte dieser Website wurden mit größtmöglicher Sorgfalt erstellt. Dennoch übernehmen wir keine Gewähr für die Richtigkeit, Vollständigkeit und Aktualität der bereitgestellten Inhalte.</p>
 
-        <h3>Externe Links:</h3>
-        <p>Unsere Website enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Daher können wir für diese fremden Inhalte keine Gewähr übernehmen.</p>
+            <h3>Externe Links:</h3>
+            <p>Unsere Website enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Daher können wir für diese fremden Inhalte keine Gewähr übernehmen.</p>
 
-        <h3>Urheberrecht:</h3>
-        <p>Die auf dieser Website veröffentlichten Inhalte unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung bedarf der vorherigen schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.</p>
+            <h3>Urheberrecht:</h3>
+            <p>Die auf dieser Website veröffentlichten Inhalte unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung oder Verbreitung bedarf der vorherigen schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.</p>
+        </section>
+
+        <footer>
+            <div class="footer-content">
+              <div class="footer-contact">
+                <a href="./index.html"><img src="./images/Logo_black.png" class="footer-logo" alt="logo"></a>
+                <p>E-Mail: co2-monitor@gmail.com</p>
+                <p>Telefon: +49 123 4567890</p>
+              </div>
+              <div class="social-links">
+                <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
+                <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
+                <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
+              </div>
+              <div class="footer-links">
+                <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
+                <a href="impressum.html">Impressum</a>
+                <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
+              </div>
+            </div>
+          </footer>
     </main>
-
-    <footer>
-        <img src="./images/logo_weiss.png" alt="logo">
-        <p>E-Mail: co2-monitor@gmail.com</p>
-        <p>Telefon: +49 123 4567890</p>
-
-        <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
-        <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
-        <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
-
-        <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
-        <a href="impressum.html">Impressum</a>
-        <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
-    </footer>
 </body>
 </html>
