Header Style Fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <main class="gridContainer">
         <header id="header">
-            <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg container-fluid" data-bs-theme="dark">
               <a class="navbar-brand" href="#index">
                 <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
               </a>
@@ -239,7 +239,7 @@
             <div class="container">
                 <div id="about-detail">
                   <img src="./images/photo-nic-RmZIUIF2S2Q-unsplash.jpg" class="img-fluid" alt="landscape image snowy forest">
-                  <p>CO₂Monitor ist eine unabhängige Non-Profit-Organisation, die sich für mehr Transparenz bei CO₂-Emissionen einsetzt. Der Klimawandel ist eine der größten Herausforderungen unserer Zeit, doch oft fehlt es an klaren und zugänglichen Informationen darüber, welche Länder und Unternehmen wie viel CO₂ ausstoßen. Genau hier setzt CO₂Monitor an: Unsere Plattform stellt umfassende und verlässliche Daten bereit, die es ermöglichen, Emissionen gezielt zu analysieren und nachzuvollziehen. Durch interaktive Visualisierungen, Filtermöglichkeiten und Vergleichsfunktionen bieten wir eine transparente Grundlage für Wissenschaftler, Aktivisten, Unternehmen und politische Entscheidungsträger. Unser Ziel ist es, das Bewusstsein für klimaschädliche Emissionen zu schärfen und den Wandel hin zu nachhaltigeren Wirtschafts- und Lebensweisen aktiv zu fördern. Wir glauben, dass Wissen der erste Schritt zur Veränderung ist – deshalb setzen wir auf offene Daten, verständliche Aufbereitung und eine benutzerfreundliche Plattform, die es jedem ermöglicht, sich mit den realen Zahlen und Fakten des Klimawandels auseinanderzusetzen.</p>
+                  <p>CO₂Monitor ist eine unabhängige Non-Profit-Organisation, die sich für mehr Transparenz bei CO₂-Emissionen einsetzt. Der Klimawandel ist eine der größten Herausforderungen unserer Zeit, doch oft fehlt es an klaren und zugänglichen Informationen darüber, welche Länder und Unternehmen wie viel CO₂ ausstoßen. Genau hier setzt CO₂Monitor an: Unsere Plattform stellt umfassende und verlässliche Daten bereit, die es ermöglichen, Emissionen gezielt zu analysieren und nachzuvollziehen. Durch interaktive Filtermöglichkeiten bieten wir eine transparente Grundlage für Wissenschaftler, Aktivisten, Unternehmen und politische Entscheidungsträger. Unser Ziel ist es, das Bewusstsein für klimaschädliche Emissionen zu schärfen und den Wandel hin zu nachhaltigeren Wirtschafts- und Lebensweisen aktiv zu fördern. Wir glauben, dass Wissen der erste Schritt zur Veränderung ist – deshalb setzen wir auf eine benutzerfreundliche Plattform.</p>
                 </div>
               </div>
         </section>
