--- a/datenschutzrichtlinien.html
+++ b/datenschutzrichtlinien.html
@@ -10,10 +10,14 @@
 <body class="bg-black">
     <main class="gridContainer">
         <header id="header">
-            <nav class="navbar navbar-expand-lg container navbar bg-black border-bottom border-body" data-bs-theme="dark">
+            <nav class="navbar navbar-expand-lg container-fluid" data-bs-theme="dark">
               <a class="navbar-brand" href="./index.html">
                 <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
               </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item header-nav-item">
