--- a/index.html
+++ b/index.html
@@ -245,28 +245,28 @@
         </section>
 
         <section id="contact">
-            <h3>Kontaktiere uns hier</h3>
-            <form action="kontakt.php" method="post" class="contact-form">
+          <h3>Kontaktiere uns hier</h3>
+          <form action="#" method="post" class="contact-form">
               <div class="form-group">
-                <label for="vorname">Vorname</label>
-                <input type="text" id="vorname" name="vorname" required>
+                  <label for="vorname" class="form-label">Vorname</label>
+                  <input type="text" id="vorname" name="vorname" class="form-control" required>
               </div>
               <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+                  <label for="name" class="form-label">Name</label>
+                  <input type="text" id="name" name="name" class="form-control" required>
               </div>
               <div class="form-group">
-                <label for="email">E-Mail</label>
-                <input type="text" id="email" name="email" required>
+                  <label for="email" class="form-label">E-Mail</label>
+                  <input type="email" id="email" name="email" class="form-control" required>
               </div>
               <div class="form-group">
-                <label for="nachricht">Nachricht</label>
-                <textarea id="nachricht" name="nachricht" required></textarea>
+                  <label for="nachricht" class="form-label">Nachricht</label>
+                  <textarea id="nachricht" name="nachricht" class="form-control" rows="5" required></textarea>
               </div>
-              <button type="submit" class="submit-button">Senden</button>
-            </form>
-            <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" class="contact-image" alt="landscape image snowy mountain">
-          </section>
+              <button type="submit" class="btn btn-dark">Senden</button>
+          </form>
+          <img src="./images/chris-lutke-VMJGmTuRVFs-unsplash.jpg" class="contact-image img-fluid rounded" alt="landscape image snowy mountain">
+      </section>
 
           <footer>
             <div class="footer-content">
