--- a/datenschutzrichtlinien.html
+++ b/datenschutzrichtlinien.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutzrichtlinien</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles_2.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="bg-black">
     <main class="gridContainer">
         <header id="header">
             <nav class="navbar navbar-expand-lg container-fluid" data-bs-theme="dark">
-              <a class="navbar-brand" href="./index.html">
-                <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./images/logo_weiss.png" class="img-fluid" alt="logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                   <li class="nav-item header-nav-item">
-                    <a class="nav-link active" href="./index.html">Zurück zur Homepage</a>
+                        <a class="nav-link active" href="./index.html">Zurück zur Homepage</a>
                   </li>
                 </ul>
               </div>
             </nav>
-          </header>
+        </header>
 
         <section id="intro">
             <h1>Datenschutzrichtlinien</h1>
@@ -76,19 +76,19 @@
         <footer>
             <div class="footer-content">
               <div class="footer-contact">
-                <a href="./index.html"><img src="./images/Logo_black.png" class="footer-logo" alt="logo"></a>
-                <p>E-Mail: co2-monitor@gmail.com</p>
-                <p>Telefon: +49 123 4567890</p>
+                    <a href="./index.html"><img src="./images/Logo_black.png" class="footer-logo" alt="logo"></a>
+                    <p>E-Mail: co2-monitor@gmail.com</p>
+                    <p>Telefon: +49 123 4567890</p>
               </div>
               <div class="social-links">
-                <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
-                <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
-                <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
+                    <a href="404page.html"><img src="./images/instagram.png" alt="Instagram Link"></a>
+                    <a href="404page.html"><img src="./images/tik-tok.png" alt="TikTok Link"></a>
+                    <a href="404page.html"><img src="./images/x.png" alt="X Link"></a>
               </div>
               <div class="footer-links">
-                <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
-                <a href="impressum.html">Impressum</a>
-                <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
+                    <a href="datenschutzrichtlinien.html">Datenschutzrichtlinien</a>
+                    <a href="impressum.html">Impressum</a>
+                    <a href="nutzungsbedingungen.html">Nutzungsbedingungen</a>
               </div>
             </div>
           </footer>
